--- a/application/views/frontend/meta.html
+++ b/application/views/frontend/meta.html
@@ -103,6 +103,9 @@
 				.right{
 					float:right ;
 				}
+				.loadingMessage{
+					width:0%;position:fixed;z-index:10000; top:52px;background-color:green;height:6px;
+				}
 				 
 		</style>	
         <script src="<?=ASSETS_PATH?>web/js/apps/contentScript.js"></script>
